--- a/package.json
+++ b/package.json
@@ -24,13 +24,11 @@
     "recharts": "^2.7.2",
     "yup": "^1.2.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/",
-    "format": "prettier --write src/"
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -55,4 +53,6 @@
     "eslint": "^8.45.0",
     "prettier": "^3.0.0"
   }
+  ,
+  "proxy": "http://localhost:5000"
 }
