--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
-    "@mui/x-data-grid": "^6.10.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.11.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
-    "date-fns": "^2.30.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.2",
-    "react": "^18.2.0",
+    "react": "^19.1.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.1.1",
     "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^7.9.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.7.2",
+    "recharts": "^3.2.0",
     "yup": "^1.2.0"
   },
-"scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,10 +49,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "eslint": "^8.45.0",
+    "@babel/core": "^7.28.4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/jest": "^30.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.0.0"
-  }
-  ,
+  },
   "proxy": "http://localhost:5000"
 }
