--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.2",
+    "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^7.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^3.2.0",
     "yup": "^1.2.0"
   },
