--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:backend": "cd src/backend && npm start",
+    "start:frontend": "react-scripts start",
+    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "setup": "npm install && cd src/backend && npm install",
+    "postinstall": "cd src/backend && npm install"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +60,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@types/jest": "^30.0.0",
     "babel-eslint": "^10.1.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.32.0",
