--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^7.9.0",
-    "react-scripts": "^5.0.1",
+  "react-scripts": "^5.0.1",
     "recharts": "^3.2.0",
     "yup": "^1.2.0"
   },
@@ -31,9 +31,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:backend": "cd src/backend && npm start",
-    "start:frontend": "react-scripts start",
-    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+  "start:backend": "cd src/backend && npm start",
+  "start:frontend": "cross-env HOST=0.0.0.0 react-scripts start",
+  "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "setup": "npm install && cd src/backend && npm install",
     "postinstall": "cd src/backend && npm install"
   },
@@ -67,7 +67,8 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "cross-env": "^7.0.3"
   },
   "proxy": "http://localhost:5000"
 }
